data/derived/sp14/progs/unify/prog4711.ml.out
Characters 71-87:
  | true -> helper (f,x) f b
            ^^^^^^^^^^^^^^^^
Error: This expression has type 'a but an expression was expected of type
         'b -> 'a
       The type variable 'a occurs inside 'b -> 'a
